--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI = "mongodb+srv://harishramesh99:hASlveOJDMokr7N3@pulseblog.imviv.mongodb.net/?retryWrites=true&w=majority&appName=pulseBlog"
+MONGODB_URI = "mongodb+srv://harishramesh99:hASlveOJDMokr7N3@pulseblog.imviv.mongodb.net/?retryWrites=true&w=majority&appName=pulseBlog"
