--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,20 @@
 {
+    "framework": null,
     "version": 2,
     "builds": [
       {
         "src": "app.js",
         "use": "@vercel/node"
-      },
-      {
-        "src": "public/**",
-        "use": "@vercel/static"
       }
     ],
     "routes": [
       {
-        "src": "/public/(.*)",
+        "src": "/static/(.*)",
         "dest": "/public/$1"
       },
       {
-        "src": "/routes/(.*)",
-        "dest": "/routes/$1"
-      },
-      {
-        "src": "/views/(.*)",
-        "dest": "/views/$1"
-      },
-      {
         "src": "/(.*)",
-        "dest": "/app.js"
+        "dest": "app.js"
       }
     ]
   }
